# SoftwareGraphicsPipeline

./: CMakeLists.txt  README.md
Models/: Mewtwo_lp.raw
src/: EntryPoint.cpp  Scene.cpp  Scene.hpp  Triangle.cpp  Triangle.hpp
